update paper link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ document.addEventListener('click', function(){_countAA-=10;doBBBd()}, false)
   <h3 style="text-align:center"><em>With one single reference image, our MasterWeaver can generate photo-realistic personalized images with diverse clothing, accessories, facial attributes and actions in various contexts.</em></h3>
     <font size="+2">
           <p style="text-align: center;">
-            <a href="https://arxiv.org/abs/xxxx" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="https://arxiv.org/abs/2405.05806" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
 	        <a href="https://github.com/csyxwei/MasterWeaver" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="xxx" target="_blank">[BibTeX]</a>
           </p>
@@ -80,12 +80,12 @@ document.addEventListener('click', function(){_countAA-=10;doBBBd()}, false)
 
 <div class="content">
   <h2>BibTex</h2>
-<!--  <code> @article{wei2024masterweaver,<br>-->
-<!--  &nbsp;&nbsp;title={DreamBooth: Fine Tuning Text-to-image Diffusion Models for Subject-Driven Generation},<br>-->
-<!--  &nbsp;&nbsp;author={Ruiz, Nataniel and Li, Yuanzhen and Jampani, Varun and Pritch, Yael and Rubinstein, Michael and Aberman, Kfir},<br>-->
-<!--  &nbsp;&nbsp;booktitle={arXiv preprint arxiv:2208.12242},<br>-->
-<!--  &nbsp;&nbsp;year={2022}<br>-->
-<!--  } </code> -->
+  <code> @article{wei2024masterweaver,<br>
+  &nbsp;&nbsp;title={MasterWeaver: Taming Editability and Identity for Personalized Text-to-Image Generation},<br>
+  &nbsp;&nbsp;author={Yuxiang Wei, Zhilong Ji, Jinfeng Bai, Hongzhi Zhang, Lei Zhang, Wangmeng Zuo},<br>
+  &nbsp;&nbsp;booktitle={arXiv preprint arxiv:2405.05806},<br>
+  &nbsp;&nbsp;year={2024}<br>
+  } </code>
 </div>
 <div class="content" id="acknowledgements">
   <p>
