--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ document.addEventListener('click', function(){_countAA-=10;doBBBd()}, false)
           <p style="text-align: center;">
             <a href="https://arxiv.org/abs/2405.05806" target="_blank">[Paper]</a> &nbsp;&nbsp;&nbsp;&nbsp;
 	        <a href="https://github.com/csyxwei/MasterWeaver" target="_blank">[Code]</a> &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="xxx" target="_blank">[BibTeX]</a>
+            <a href="#bibtex" target="_blank">[BibTeX]</a>
           </p>
     </font>
 </div>
@@ -78,12 +78,12 @@ document.addEventListener('click', function(){_countAA-=10;doBBBd()}, false)
   <img class="summary-img" src="assets/images/application.jpg" style="width:90%;"> <br>
 </div>
 
-<div class="content">
+<div class="content" id="bibtex">
   <h2>BibTex</h2>
-  <code> @article{wei2024masterweaver,<br>
-  &nbsp;&nbsp;title={MasterWeaver: Taming Editability and Identity for Personalized Text-to-Image Generation},<br>
+  <code> @inproceedings{wei2024masterweaver,<br>
+  &nbsp;&nbsp;title={MasterWeaver: Taming Editability and Face Identity for Personalized Text-to-Image Generation},<br>
   &nbsp;&nbsp;author={Yuxiang Wei, Zhilong Ji, Jinfeng Bai, Hongzhi Zhang, Lei Zhang, Wangmeng Zuo},<br>
-  &nbsp;&nbsp;booktitle={arXiv preprint arxiv:2405.05806},<br>
+  &nbsp;&nbsp;booktitle={European Conference on Computer Vision},<br>
   &nbsp;&nbsp;year={2024}<br>
   } </code>
 </div>
