--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ document.addEventListener('click', function(){_countAA-=10;doBBBd()}, false)
 
 <body>
 <div class="content">
-  <h1><strong>MasterWeaver: Taming Editability and Identity for Personalized Text-to-Image Generation</strong></h1>
+  <h1><strong>MasterWeaver: Taming Editability and Face Identity for Personalized Text-to-Image Generation</strong></h1>
   <p id="authors"><a href="https://scholar.google.com/citations?user=hORhL7YAAAAJ">Yuxiang Wei</a><sup>1,2</sup> <a href="">Zhilong Ji</a><sup>3</sup> <a href="">Jinfeng Bai</a><sup>3</sup> <a href="http://homepage.hit.edu.cn/zhanghz">Hongzhi Zhang</a><sup>1</sup> <a href="https://www4.comp.polyu.edu.hk/~cslzhang/">Lei Zhang</a><sup>2</sup> <a href="http://homepage.hit.edu.cn/wangmengzuo">Wangmeng Zuo</a><sup>1,4</sup><br>
     <br>
   <span style="font-size: 16px"><sup>1</sup>Harbin Institute of Technology &nbsp;&nbsp;&nbsp;&nbsp; <sup>2</sup>The Hong Kong Polytechnic University &nbsp;&nbsp;&nbsp; <sup>3</sup>Tomorrow Advancing Life &nbsp;&nbsp;&nbsp;&nbsp; <sup>4</sup>Peng Cheng Lab
